--- a/dashboard-dev/requirements.txt
+++ b/dashboard-dev/requirements.txt
@@ -1,7 +1,7 @@
-pandas==2.2.2
-plotly-express==0.5.0
-plotly==5.21.0
-matplotlib==3.8.4
-seaborn==0.13.2
-numpy==1.26.4
-scipy==1.13.0
+streamlit
+pandas
+matplotlib
+seaborn
+numpy
+scipy
+plotly
